--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,9 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+*.ipr
+*.iws
+.idea/
 
 # Keystore files
 *.jks
@@ -53,3 +51,5 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+.DS_Store
